[tool.poetry]
name = "w03-aovivo"
version = "0.1.0"
description = ""
authors = ["Matheus Costa <matheeusferreeira@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
